5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1795_1599.log
== TEST (2019-05-30 16:07:33) 
-- CODE:
from numpy import*
c = array(eval(input("")))
ct = (c * 1.5)/100
print(ct)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:07:43) 
-- CODE:
from numpy import*
c = array(eval(input("")))
ct = (c * 1.5)/100
print(ct)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:21:31) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = (c * 1.5)/100
print(round(ct,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:43) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = (c * 1.5)/100
print(ct)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:32:03) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = ((sum(c))* 1.5)/100
print(ct)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:32:48) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = (sum(c)/100)* 1.5
print(ct)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:10) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = sum(c)* 1.5
print(ct)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:07) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = ((sum(c))* 0.15)/100
print(ct)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:04) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = ((sum(c))*15)/100
print(ct)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:38) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = ((sum(c))*15)/100
print(sum(c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:40:30) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = sum(c) - (sum(c)*15)/100
print(sum(c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:40:38) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = sum(c) - (sum(c)*15)/100
print(ct)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:40:59) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = sum(c) - (sum(c)*0.15)/100
print(ct)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:21) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = sum(c) - (sum(c)*15)/100
print(ct)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:57) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = sum(c) - (sum(c)*15)/100
print(ct)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:27) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = (sum(c)) - ((sum(c))*15)/100
print(ct)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:43:05) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = (sum(c)) - ((sum(c))*0.15)/100
print(ct)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:43:39) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = (sum(c)) - ((sum(c))*1.5)/100
print(ct)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:44:01) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = (sum(c)) - ((sum(c))*15)/100
print(round(ct,2)
-- ERROR:
File "XXXX", line 5
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:44:15) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = (sum(c)) - ((sum(c))*15)/100
print(round(ct,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:16) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = (sum(c)) - ((sum(c))/15)*100
print(round(ct,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:41) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = (sum(c)) - ((sum(c))/0.15)*100
print(round(ct,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:24) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = sum(c) - (sum(c)/0.15)*100
print(round(ct,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:14) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = sum(c) - (sum(c)/15)*100
print(round(ct,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:39) 
-- CODE:
from numpy import*
c = array(eval(input("Vetor de custos: ")))
ct = sum(c) - (sum(c)/15)*100
print(round(ct,2))
print(sum(c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
